--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <!-- CUSTOM CSS -->
     <link
-    href="/summerdate.css"
+    href="summerdate.css"
     rel="stylesheet"
   />
   <!-- POPPINS FONT GOOGLE -->
@@ -32,7 +32,7 @@
     <!-- NAVBAR SECTION  -->
     <nav class="navbar navbar-expand-lg position-absolute " style="z-index: 3;">
       <div class="container">
-        <img src="/img/logo.png" width="40" />
+        <img src="img/logo.png" width="40" />
         <a class="navbar-brand fw-bold mx-2" href="#">OX Studio</a>
         <button
           class="navbar-toggler toggler-bg"
